# Pratica1_Computacao_Grafica

./: CMakeLists.txt  main.c
